--- a/app/app/src/main/AndroidManifest.xml
+++ b/app/app/src/main/AndroidManifest.xml
@@ -8,19 +8,25 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.NoActionBar">
-        <activity android:name=".dashboard"
+        android:supportsRtl="true">
+        <activity
+            android:name=".dashboard"
+            android:configChanges="orientation"
+            android:label="Dashboard"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.Light"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
+            android:name=".signup"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity"/>
-        <activity android:name=".signup"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
+            tools:ignore="LockedOrientationActivity" />
+        <activity
+            android:name=".landing"
             android:configChanges="orientation"
             android:screenOrientation="portrait"
-            tools:ignore="LockedOrientationActivity"/>
-        <activity android:name=".landing"
-            android:configChanges="orientation"
-            android:screenOrientation="portrait"
+            android:theme="@style/Theme.AppCompat.NoActionBar"
             tools:ignore="LockedOrientationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
