--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -39,6 +39,8 @@ android {
 }
 
 dependencies {
+    implementation 'com.google.android.gms:play-services-auth:18.0.0'
+    implementation 'com.google.firebase:firebase-auth:19.3.1'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.google.firebase:firebase-analytics:17.4.2'
     implementation fileTree(dir: 'libs', include: ['*.jar'])
@@ -54,5 +56,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation "androidx.recyclerview:recyclerview:1.1.0"
-
 }
+
+
