--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.1.0'
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+
+    implementation 'com.android.volley:volley:1.1.1'
 }
 
 
