--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -65,7 +65,8 @@ dependencies {
 
     implementation 'com.android.volley:volley:1.1.1'
     //noinspection GradleCompatible
-    implementation 'com.android.support:cardview-v7:28.0.0'
+    implementation 'com.android.support:recyclerview-v7:28.0.0'
+
 }
 
 
