--- a/app/app/build.gradle
+++ b/app/app/build.gradle
@@ -38,6 +38,10 @@ android {
 
 }
 
+repositories {
+    maven { url 'https://jitpack.io' }
+}
+
 dependencies {
     implementation 'com.facebook.android:facebook-login:5.15.3'
     implementation 'com.google.android.gms:play-services-auth:18.0.0'
@@ -61,6 +65,8 @@ dependencies {
     // Package for download a photo an put it into a container
     implementation 'com.github.bumptech.glide:glide:4.11.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.11.0'
+    // Package for use flowcharts
+    implementation 'com.github.PhilJay:MPAndroidChart:v3.1.0'
 
     // Firebase services
     implementation 'com.google.firebase:firebase-messaging:20.2.0'
